sonarqube issues resolved part 2